# ksre

./: .gitignore  Cargo.toml  README.md  demo.cast  note  run.sh  test.sh
ksre-agent/: Cargo.toml  build.rs
ksre-agent/benches/: example_bench.rs
ksre-agent/src/: bytes.rs  lib.rs  main.rs
ksre-agent/src/agent/: mod.rs
ksre-agent/src/client/: dummy.rs  mod.rs
ksre-agent/src/collector/: dummy.rs  mod.rs  procfs.rs
ksre-agent/src/collector/dummy/: mod.rs
ksre-agent/src/collector/procfs/: collect.rs  collector.rs  meminfo.rs  mod.rs  proc_meminfo.rs  proc_pid_io.rs  proc_pid_samps.rs  proc_pid_stack.rs  proc_pid_status.rs  proc_pid_syscall.rs  process.rs  symbols.rs  systeminfo.rs  util.rs
ksre-agent/src/collector/procfs/process/: constant.rs  io.rs  maps.rs  mod.rs  smaps.rs  stack.rs  stat.rs  status.rs  syscall.rs
ksre-agent/src/collector/procfs/test/: meminfo  smaps  unistd.h
ksre-agent/src/storage/: mem.rs  mod.rs  store.rs
ksre-agent/src/storage/btree/: constant.rs  error.rs  freelist.rs  meta.rs  mod.rs  node.rs  pager.rs  util.rs
ksre-cli/: Cargo.toml
ksre-lib/: Cargo.toml
ksre-lib-proc/: Cargo.toml
ksre-lib-proc/src/: lib.rs
ksre-lib/src/: codec.rs  lib.rs
ksre-lib/src/serializer/: bytes.rs  mod.rs  varint.rs
ksre-libs/: Cargo.toml
ksre-tui/: Cargo.toml
ksre-tui/src/: lib.rs  main.rs  tui.rs
ksre-tui/src/app/: action.rs  core.rs  keybind.rs  mod.rs  state.rs
ksre-tui/src/app/handler/: keybind.rs  mod.rs  pod.rs
ksre-tui/src/app/job/: mod.rs  pod_exec.rs  pod_log.rs
ksre-tui/src/app/ui/: color.rs  home.rs  mod.rs  node.rs  theme.rs  util.rs
ksre-tui/src/app/ui/pod/: index.rs  list.rs  logs.rs  mod.rs  resource.rs  spec.rs  status.rs  tty.rs
ksre-tui/src/event/: key.rs  mod.rs
ksre-tui/src/kubernetes/: helper.rs  indexer.rs  mod.rs
ksre-tui/src/kubernetes/api/: metrics.rs  mod.rs  object.rs  pod.rs  runtime.rs
ksre-tui/src/kubernetes/metrics/: mod.rs  node.rs  pod.rs
ksre-tui/src/kubernetes/reflector/: metrics.rs  mod.rs
rsk8s-tui/: Cargo.toml
rsk8s-tui/src/: lib.rs  main.rs  tui.rs
rsk8s-tui/src/app/: action.rs  core.rs  keybind.rs  mod.rs  state.rs
rsk8s-tui/src/app/job/: mod.rs  pod_exec.rs  pod_log.rs
rsk8s-tui/src/app/ui/: cluster.rs  home.rs  mod.rs  node.rs  pod.rs  util.rs
rsk8s-tui/src/app/ui/pod/: list.rs  mod.rs  status.rs  tty.rs
rsk8s-tui/src/event/: key.rs  mod.rs
rsk8s-tui/src/kubernetes/: indexer.rs
rsk8s-tui/src/kubernetes/api/: mod.rs  pod.rs  runtime.rs
rsk8s-tui/src/kubernetes/reflector/: pod.rs
