[package]
name = "ksre-tui"
version = "0.1.0"
edition = "2021"


[lib]
name = "libksre"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = "4.4.18"
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
k8s-openapi = { version = "0.21.0", features = ["latest"] }
kube = { version = "0.88.1", features = ["runtime", "derive", "kube-client", "ws"] }
lazy_static = "1.4.0"
nucleo-matcher = "0.3.0"
# ratatui = { version = "0.25.0", features = ["all-widgets"] }
ratatui = { version = "0.26.0-alpha.3", features = ["all-widgets"] }
serde = "1.0.197"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tui-textarea = "0.4.0"
